// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipIcon should allow the user to specify the direction 1`] = `
<TooltipIcon
  className="custom-class"
  direction="top"
  tooltipText="tooltip text"
>
  <div
    className="custom-class bx--tooltip-icon"
  >
    <div
      aria-label="tooltip text"
      className="bx--tooltip__trigger bx--tooltip--icon__top"
      data-tooltip-text="tooltip text"
      role="tooltip"
    >
      <svg />
    </div>
  </div>
</TooltipIcon>
`;

exports[`TooltipIcon should render 1`] = `
<TooltipIcon
  className="custom-class"
  direction="bottom"
  tooltipText="tooltip text"
>
  <div
    className="custom-class bx--tooltip-icon"
  >
    <div
      aria-label="tooltip text"
      className="bx--tooltip__trigger bx--tooltip--icon__bottom"
      data-tooltip-text="tooltip text"
      role="tooltip"
    >
      <svg />
    </div>
  </div>
</TooltipIcon>
`;
